finally really get chat to work on firefox... by using overflow: hidden to ensure container height must stay in viewport

--- a/src/smc-webapp/_editor.sass
+++ b/src/smc-webapp/_editor.sass
@@ -574,6 +574,7 @@ h6 { font-size: 110% }
   flex           : 1
   display        : flex
   flex-direction : column
+  overflow       : hidden
 
 .smc-vflex
   display        : flex
